workflow file updated with resolved error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run tests
         run: |
           pytest test_model.py  
-          
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -53,23 +53,16 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t gcr.io/gcp-learn-430710/fashion-mnist:$GITHUB_SHA .
-          
+
+      - name: Authenticate with GCP
+        run: |
+          echo "${{ secrets.GCP_KEY }}" > /tmp/gcp-key.json
+          gcloud auth activate-service-account --key-file=/tmp/gcp-key.json
+          gcloud auth configure-docker --quiet
+        env:
+          GCP_PROJECT_ID: gcp-learn-430710
+
       - name: Push Docker image to GCR
         run: |
-          echo ${{ secrets.GCP_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
           docker push gcr.io/gcp-learn-430710/fashion-mnist:$GITHUB_SHA
-        env:
-          GCP_PROJECT_ID: gcp-learn-430710
-          
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Copy Docker image to GCS
-        run: |
-          gsutil cp gs://gcr.io/gcp-learn-430710/fashion-mnist:$GITHUB_SHA gs://cicd-on-gcp/
-        env:
-          GCP_PROJECT_ID: gcp-learn-430710
